--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -1,5 +1,30 @@
 ---
 apiVersion: admissionregistration.k8s.io/v1
+kind: MutatingWebhookConfiguration
+metadata:
+  name: mutating-webhook-configuration
+webhooks:
+- admissionReviewVersions:
+  - v1
+  clientConfig:
+    service:
+      name: webhook-service
+      namespace: system
+      path: /mutate-contractor-t3kton-com-v1-structure
+  failurePolicy: Fail
+  name: vstructure.kb.io
+  rules:
+  - apiGroups:
+    - contractor.t3kton.com
+    apiVersions:
+    - v1
+    operations:
+    - CREATE
+    resources:
+    - structures
+  sideEffects: None
+---
+apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
   name: validating-webhook-configuration
