--- a/config/rbac/structure_editor_role.yaml
+++ b/config/rbac/structure_editor_role.yaml
@@ -1,13 +1,15 @@
-# permissions for end users to edit structures.
+# This rule is not used by the project kubernetes itself.
+# It is provided to allow the cluster admin to help manage permissions for users.
+#
+# Grants permissions to create, update, and delete resources within the contractor.t3kton.com.
+# This role is intended for users who need to manage these resources
+# but should not control RBAC or manage permissions for others.
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: structure-editor-role
-    app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: kubernetes
-    app.kubernetes.io/part-of: kubernetes
+    app.kubernetes.io/name: kubernetes
     app.kubernetes.io/managed-by: kustomize
   name: structure-editor-role
 rules:
