--- a/config/rbac/structure_viewer_role.yaml
+++ b/config/rbac/structure_viewer_role.yaml
@@ -1,13 +1,15 @@
-# permissions for end users to view structures.
+# This rule is not used by the project kubernetes itself.
+# It is provided to allow the cluster admin to help manage permissions for users.
+#
+# Grants read-only access to contractor.t3kton.com resources.
+# This role is intended for users who need visibility into these resources
+# without permissions to modify them. It is ideal for monitoring purposes and limited-access viewing.
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: clusterrole
-    app.kubernetes.io/instance: structure-viewer-role
-    app.kubernetes.io/component: rbac
-    app.kubernetes.io/created-by: kubernetes
-    app.kubernetes.io/part-of: kubernetes
+    app.kubernetes.io/name: kubernetes
     app.kubernetes.io/managed-by: kustomize
   name: structure-viewer-role
 rules:
