--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -26,6 +26,12 @@ rules:
 - apiGroups:
   - contractor.t3kton.com
   resources:
+  - structures/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - contractor.t3kton.com
+  resources:
   - structures/status
   verbs:
   - get
